# kaigo-bi-platform

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  nginx.conf  render.yaml  requirements.txt  start.sh
.claude/: settings.local.json
.serena/: project.yml
claudedocs/: .gitkeep  ANALYSIS_JobCard_Salary_Correlation_20260121.md  ANALYSIS_LostOpportunity_20260126.md  ANALYSIS_LostOpportunity_Deep_20260127.md  ANALYSIS_WonSegments_202504_202601.md  ANALYSIS_recent_winrate_6months_20260124.md  FY2026_april_strategy.md  GAS_Zoom_商談品質管理_要件定義.md  KAIGO_BI_v3_DATA_DRIVEN_REDESIGN.md  MECE_cross_analysis_complete.md  MECE_hellowork_mapping_20260121.md  MEMO_OrganizationIssues_20260128.md  PIPELINE_kaigo_bi.md  PLAN_kaigo_bi_v3_optimization.md  PLAN_visualization_improvement.md  PROGRESS_kaigo_bi_v3_20260325.md  PROJECT_SalesforceZoom_Integration.md  data_sources.md  (+29 more)
kaigo-bi-backend/: Cargo.toml
kaigo-bi-backend/src/: config.rs  db.rs  error.rs  main.rs
kaigo-bi-backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
kaigo-bi-backend/src/models/: aggregation.rs  facility.rs  filters.rs  mod.rs
kaigo-bi-backend/src/routes/: auth.rs  benchmark.rs  corp_group.rs  dashboard.rs  due_diligence.rs  export.rs  external.rs  facilities.rs  growth.rs  ma_screening.rs  market.rs  meta.rs  mod.rs  pmi.rs  quality.rs  revenue.rs  salary.rs  users.rs  workforce.rs
kaigo-bi-backend/src/services/: aggregator.rs  cache_store.rs  csv_export.rs  data_store.rs  mod.rs  search.rs  sql_aggregator.rs
kaigo-bi-backend/src/utils/: corp_type.rs  mod.rs  prefecture.rs
(+406 files in other folders)
